--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,5 @@ SECRET_KEY=secret-key
 TRELLO_API_KEY=trello-api-key
 TRELLO_TOKEN=trello-token
 TRELLO_BOARD_ID=trello-board-id
+TO_DO_LIST_NAME="To Do"
+DONE_LIST_NAME="Done"
