Exercise 3 markups, removing pickle
Exercise 3 markups

--- a/.env.template
+++ b/.env.template
@@ -11,5 +11,6 @@ SECRET_KEY=secret-key
 TRELLO_API_KEY=trello-api-key
 TRELLO_TOKEN=trello-token
 TRELLO_BOARD_ID=trello-board-id
-TO_DO_LIST_NAME="To Do"
-DONE_LIST_NAME="Done"
+TO_DO_LIST_NAME=To Do
+DONE_LIST_NAME=Done
+IN_PROGRESS_LIST_NAME=In progress
