Exercise 7 paths ignore

--- a/.github/workflows/todoapp-ci-pipeline.yml
+++ b/.github/workflows/todoapp-ci-pipeline.yml
@@ -1,5 +1,15 @@
 name: Continuous Integration
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - '.github/**'
+      - './ansible/**'
+      - 'README.md'
+  pull_request:
+    paths-ignore:
+      - '.github/**'
+      - './ansible/**'
+      - 'README.md'
 
 jobs:
   build:
