--- a/.github/workflows/todoapp-ci-pipeline.yml
+++ b/.github/workflows/todoapp-ci-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
     name: Push docker image and deploy
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/exercise-9-expanding-ci-pipeline'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - name: Log in to Docker Hub
@@ -40,8 +40,7 @@ jobs:
 
       - name: Push Docker image
         run: | 
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest --all-tags
 
       - name: Deploy to Azure
         run: curl -v -X POST '${{ secrets.WEBHOOK_URL }}'
