Exercise 10: Test fixes/additions

--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,4 @@ FLASK_DEBUG=true
 
 # Required to use Flask's session feature (for storing todos in a browser cookie in the first exercise): https://flask.palletsprojects.com/en/2.3.x/config/#SECRET_KEY
 SECRET_KEY=secret-key
-MONGODB_PRIMARY_CONNECTION=mongo-db-primary-connection
+MONGODB_PRIMARY_CONNECTION="mongodb://fakemongo.com"
