--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.14.0"
 requests = "^2.31.0"
 pytest = "^8.1.1"
 pymongo = "^4.10.1"
+mongomock = "^4.2.0.post1"
 
 [tool.poetry.dev-dependencies]
 
