--- a/.github/workflows/todoapp-ci-pipeline.yml
+++ b/.github/workflows/todoapp-ci-pipeline.yml
@@ -10,6 +10,7 @@ on:
       - '.github/**'
       - './ansible/**'
       - 'README.md'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -24,7 +25,7 @@ jobs:
     name: Push docker image and deploy
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - name: Log in to Docker Hub
