--- a/.github/workflows/todoapp-ci-pipeline.yml
+++ b/.github/workflows/todoapp-ci-pipeline.yml
@@ -1,4 +1,5 @@
-name: Continuous Integration
+name: Build and Deploy
+description: Builds and tests on all runs. Deploys when main is updated or when workflow is run manually for a given branch.
 on:
   push:
     paths-ignore:
