--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A simple ToDo app for your DevOps apprenticeship"
 authors = []
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 Flask = "^2.2.5"
 python-dotenv = "^0.14.0"
 requests = "^2.31.0"
@@ -13,6 +13,7 @@ pytest = "^8.1.1"
 pymongo = "^4.10.1"
 mongomock = "^4.2.0.post1"
 flask-dance = "^7.1.0"
+blinker = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 
